# Caffeinated-Odyssey

./: README.md  docker-compose.yml  requirements.txt
app/: Dockerfile  barista_app.py  common.py  customer_app.py  data.py  logs.py  main.py  orders_queue.py  orders_storage.py  pyproject.toml  requirements.txt  requirements_dev.txt
app/clients/: barista_simulation.py  customer_simulation.py
nginx/: nginx.conf
