[tool.poetry]
name = "caffeinated-odyssey"
version = "0.1.0"
description = ""
authors = ["Mateusz Zarudzki <mateusz.zarudzki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
aiohttp = "^3.10.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
mypy = "^1.11.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
